--- a/about.qmd
+++ b/about.qmd
@@ -14,7 +14,7 @@ The project, entitled ‘Reconstructing Eastward Propagation of Surface Uplift i
 My project focuses on the Western and Eastern Alps, along with extending the record for the Central Alps to pre-Miocene times. The research focuses on stable isotope-based paleoelevation and paleoclimate reconstructions (ẟ18O, ẟD, D47-D48). The obtained ẟ-ẟ paleoaltimetry and clumped isotope-derived paleotemperature records are coupled with an isotope tracking atmospheric General Circulation Model (GCM) performed by colleagues from the ‘Earth System Dynamics Group’ at the University of Tübingen.  
 
 
-Since April 2025, I joined the [Climatology and the Biosphere group](https://www.cambridge.org/core/journals/quaternary-research/article/abs/late-holocene-coastal-dynamics-south-of-the-chanthaburi-estuary-eastern-gulf-of-thailand/CA506FAE3DF018CE3D7D2AEA52C6F4C9){target="_blank"} at the university of Tuebingen as a Research Scientist. My main tasks include stable isotope analysis of water samples and the active monitoring of cave systems to investigate environmental processes.
+Since April 2025, I joined the [Climatology and the Biosphere group](https://www.cambridge.org/core/journals/quaternary-research/article/abs/late-holocene-coastal-dynamics-south-of-the-chanthaburi-estuary-eastern-gulf-of-thailand/CA506FAE3DF018CE3D7D2AEA52C6F4C9){target="_blank"} at the university of Tübingen as a Research Scientist. My main tasks include stable isotope analysis of water samples and the active monitoring of cave systems to investigate environmental processes.
 
 When I am not working in the lab, I am playing cello, boxing, crafting, or hiking (in the Alps).
 
