--- a/index.qmd
+++ b/index.qmd
@@ -31,7 +31,7 @@ delete this section)
 I am currently a Research Scientist in the Climatology and the Biosphere group at the Geo- and Environmental Research Centre (GUZ) at the University of Tübingen (Germany). 
 You can find below pictures from the fieldwork carried out during my Master’s and PhD studies.
 --
-Je travaille actuellement au sein du groupe 'Climatology and the Biosphere' à l''université de Tübingen (Allemagne). 
+Je travaille actuellement au sein du groupe 'Climatology and the Biosphere' à l'université de Tübingen (Allemagne). 
 Ci-dessous, des photos du travail de terrain effectué pendant mes études de Master et de doctorat.
 --
 
