--- a/legal-notice.qmd
+++ b/legal-notice.qmd
@@ -4,9 +4,9 @@ title: "Legal Notice"
 
 Provider according to § 5 TMG is:  
 Armelle Ballian  
-Georg-Voigt-Str. 14-16  
-60325 Frankfurt am Main  
-Germany  
+Schnarrenbergstrasse 94-96
+D-72076 Tuebingen
+Germany
 
-Phone: +49 0 69 75421810  
-E-Mail: armelle.ballian [at] senckenberg.de
+Phone: +49 7071 29 72492  
+E-Mail: armelle.ballian [at] uni-tuebingen.de
